--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "description": "A simple electron app that wraps the Twilio Flex web app. Main benefit is that you can now iframe any CRM within Flex, including the ones who by default don't allow it.",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon"    
+    "start": "nodemon",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "keywords": [],
   "author": "Bruno Kilian",
   "license": "ISC",
   "devDependencies": {
+    "@electron-forge/cli": "^7.1.0",
+    "@electron-forge/maker-deb": "^7.1.0",
+    "@electron-forge/maker-rpm": "^7.1.0",
+    "@electron-forge/maker-squirrel": "^7.1.0",
+    "@electron-forge/maker-zip": "^7.1.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.1.0",
     "electron": "^27.1.2",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "engines": {
-    "node": ">=20.0.0"}
+    "node": ">=20.0.0"
+  }
 }
