--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flex-electron",
   "version": "1.0.0",
-  "description": "A simple electron app that wraps the Twilio Flex web app. Main benefit is that you can now iframe any CRM within Flex, including the ones who by default don't allow it.",
+  "description": "A simple electron app that wraps the Twilio Flex web app. The main benefit is that you can now iframe any CRM within Flex, including those that, by default, don't allow it.",
   "main": "main.js",
   "scripts": {
     "start": "nodemon",
