--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "nodemon",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "keywords": [],
   "author": "Bruno Kilian",
@@ -15,14 +16,16 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.1.0",
     "@electron-forge/maker-deb": "^7.1.0",
+    "@electron-forge/maker-dmg": "^7.1.0",
     "@electron-forge/maker-rpm": "^7.1.0",
     "@electron-forge/maker-squirrel": "^7.1.0",
     "@electron-forge/maker-zip": "^7.1.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.1.0",
+    "@electron-forge/publisher-github": "^7.1.0",
     "electron": "^27.1.2",
     "nodemon": "^3.0.1"
   },
-  "dependencies": {    
+  "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
   },
   "engines": {
